Improve ExecProcess Lombok accessors and unit tests
Signed-off-by: lance <leehaut@gmail.com>